5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1716_2499.log
== TEST (2019-05-14 17:11:07) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 0
result = 0
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
print(round( , 8))





-- ERROR:
File "XXXX", line 9
    print(round( , 8))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:11:44) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 0
result = 0
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
print(round(result, 8)





-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:07) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 0
result = 0
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
print(round(result, 8)
-- ERROR:
File "XXXX", line 10
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:18) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 0
result = 0
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
print(round(result,8))
-- ERROR:
File "XXXX", line 10
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:12:42) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 1
result = 0
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
print(round(result,8))
-- ERROR:
File "XXXX", line 10
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:13:05) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 1
result = 0
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
	cont = cont = 1
print(round(result,8))
-- ERROR:
File "XXXX", line 10
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:13:13) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 1
result = 0
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
	cont = cont + 1
print(round(result,8))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:16) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 1
result = 1
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
	cont = cont + 1
print(round(result,8))
-- OUTPUT:
13.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:36) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 1
result = 1
denominador = 1
while(k < cont):
	result = result + (1/factorial(denominador))
	result = result + 1
	cont = cont + 1
print(round(result,8))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:14:48) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 1
result = 1
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	result = result + 1
	cont = cont + 1
print(round(result,8))
-- OUTPUT:
13.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:15:25) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 1
result = 1
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	denominador = denominador + 1
	cont = cont + 1
print(round(result,8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:15:33) 
-- CODE:
from math import *
k = int(input('digite um valor k: '))
cont = 1
result = 1
denominador = 1
while(k > cont):
	result = result + (1/factorial(denominador))
	denominador = denominador + 1
	cont = cont + 1
print(round(result,8))
-- EXECUTION TIME:
0.145461
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
